# statrs

./: Cargo.lock.MSRV  Cargo.toml  README.md
.github/workflows/: test.yml
src/: error.rs  generate.rs  lib.rs
src/distribution/: bernoulli.rs  beta.rs  binomial.rs  categorical.rs  cauchy.rs  chi.rs  chi_squared.rs  dirac.rs  dirichlet.rs  discrete_uniform.rs  empirical.rs  erlang.rs  exponential.rs  fisher_snedecor.rs  gamma.rs  geometric.rs  gumbel.rs  hypergeometric.rs  internal.rs  inverse_gamma.rs  laplace.rs  log_normal.rs  mod.rs  multinomial.rs  multivariate_normal.rs  multivariate_students_t.rs  negative_binomial.rs  normal.rs  pareto.rs  poisson.rs  students_t.rs  triangular.rs  uniform.rs  weibull.rs
src/function/: beta.rs  factorial.rs  gamma.rs  logistic.rs
src/statistics/: iter_statistics.rs  mod.rs  order_statistics.rs  reductor.rs  slice_statistics.rs  traits.rs
src/stats_tests/: fisher.rs  mannwhitneyu.rs
tests/: nist_tests.rs
