[package]

name = "statrs"
version = "0.16.0"
authors = ["Michael Ma"]
description = "Statistical computing library for Rust"
license = "MIT"
keywords = ["probability", "statistics", "stats", "distribution", "math"]
categories = ["science"]
homepage = "https://github.com/statrs-dev/statrs"
repository = "https://github.com/statrs-dev/statrs"
edition = "2018"

include = ["CHANGELOG.md", "LICENSE.md", "src/"]

[lib]
name = "statrs"
path = "src/lib.rs"

[features]
default = ["std"]
std = ["alloc", "rand/std", "nalgebra/std"]
alloc = ["rand/alloc", "nalgebra/alloc"]

nightly = []

[dependencies]
rand = { version = "0.8", default-features = false }
nalgebra = { version = "0.32", default-features = false, features = ["rand"] }
approx = "0.5.0"
num-traits = "0.2.14"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "order_statistics"
required-features = ["alloc"]
harness = false
