[package]
name = "statrs"
version = "0.17.1"
authors = ["Michael Ma"]
description = "Statistical computing library for Rust"
license = "MIT"
keywords = ["probability", "statistics", "stats", "distribution", "math"]
categories = ["science"]
homepage = "https://github.com/statrs-dev/statrs"
repository = "https://github.com/statrs-dev/statrs"
edition = "2021"

include = ["CHANGELOG.md", "LICENSE.md", "src/", "tests/"]

# When changing MSRV: Also update the README
rust-version = "1.61.0"

[lib]
name = "statrs"
path = "src/lib.rs"

[[bench]]
name = "order_statistics"
harness = false
required-features = ["rand"]

[features]
default = ["std", "nalgebra", "rand"]

# optional dependencies #
nalgebra = ["dep:nalgebra"]
rand = ["dep:rand", "nalgebra?/rand"]

# no_std support #

# enable standard library. this offers the most complete feature set
std = ["alloc", "nalgebra?/std", "rand?/std"]

# alloc enables some allocating types like Vec, BTreeMap and Box
# without requiring the entire standard library
alloc = ["nalgebra?/alloc", "rand?/alloc"]

# 
libm = ["nalgebra?/libm"]

[dependencies]
approx = "0.5.0"
num-traits = "0.2.14"

[dependencies.rand]
version = "0.8"
optional = true
default-features = false

[dependencies.nalgebra]
version = "0.32"
optional = true
default-features = false

[dev-dependencies]
criterion = "0.5"
anyhow = "1.0"

[dev-dependencies.nalgebra]
version = "0.32"
default-features = false
features = ["macros"]

[lints.rust.unexpected_cfgs]
level = "warn"
# Set by cargo-llvm-cov when running on nightly
check-cfg = ['cfg(coverage_nightly)']
